# pidgin-sendscreenshot

./: ChangeLog  configure  configure.ac
config/: Changelog  Makefile.am  Makefile.in  img_hosting_providers.xml
po/: AUTHORS  de.po  es.po  fr.po  it.po  nl.po  pl.po  ru.po  zh_CN.po
src/: Makefile.am  Makefile.in  cues.c  dialogs.c  dialogs.h  error.h  ftp_upload.c  ftp_upload.h  http_upload.c  http_upload.h  main.c  main.h  menus.c  menus.h  mswin-freeze.c  mswin-freeze.h  pixbuf_utils.c  pixbuf_utils.h  prefs.c  prefs.h  screencap.c  screencap.h  screenshot.c  upload_utils.c  upload_utils.h
trunk/: ChangeLog  Makefile.in  VERSION  aclocal.m4  configure.ac  svn-commit.tmp
trunk/config/: Makefile
trunk/po/: de.po  es.po  fr.po  it.po  ru.po  zh_CN.po
trunk/src/: Makefile.am  cues.c  dialogs.c  dialogs.h  error.h  ftp_upload.c  ftp_upload.h  http_upload.c  http_upload.h  main.c  main.h  menus.c  menus.h  mswin-freeze.c  pixbuf_utils.c  prefs.c  prefs.h  screencap.c  screencap.h  screenshot.h  upload_utils.c  upload_utils.h
wiki/: ChangeLog.wiki  ImageHostingProviders.wiki  LinuxDistros.wiki  TODO.wiki  Translation.wiki
