
if ENABLE_UPLOAD
hostsdir = $(PIDGIN_DATADIR)/pidgin_screenshot_data
iconshostsdir = $(PIDGIN_DATADIR)/pidgin_screenshot_data/icons
toshostsdir= $(PIDGIN_DATADIR)/pidgin_screenshot_data/tos

hosts_DATA = \
	img_hosting_providers.xml \
	Changelog

iconshosts_DATA = \
	icons/Megahorst.png \
	icons/Imgur.png \
	icons/PicyUp.png \
	icons/TheImghost.png \
	icons/ImageNerd.png \
	icons/PixsUP_(png).png \
	icons/HostingPics.png \
	icons/ImageCross.png \
	icons/Hellameke.png \
	icons/Freeimagehosting.png \
	icons/ImageHosting.png

toshosts_DATA = \
	tos/Megahorst.txt \
	tos/Imgur.txt \
	tos/PixsUP_(png).txt \
	tos/ImageNerd.txt \
	tos/TheImghost.txt \
	tos/Freeimagehosting.txt \
	tos/HostingPics.txt \
	tos/ImageHosting.txt \
	tos/ImageCross.txt \
	tos/Hellameke.txt

endif
